--- a/web/index.html
+++ b/web/index.html
@@ -6,8 +6,8 @@
     <link rel="icon" href="/favicon.png" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="keywords" content="ServerStatus,探针,威力加强版,ServerStatus-Rust,ServerStatusRust,云探针" />
-    <meta name="description" content="ServerStatus 探针 威力加强版 ServerStatus-Rust">
+    <meta name="keywords" content="Server-s" />
+    <meta name="description" content="Server-s">
     <meta name="author" content="zdz">
     <meta name="robots" content="noindex">
     <link rel="apple-touch-icon" href="/logo192.svg" />
